--- a/app/src/main/res/layout/ov_taskitem_list_view_itemview_equipment.xml
+++ b/app/src/main/res/layout/ov_taskitem_list_view_itemview_equipment.xml
@@ -13,9 +13,10 @@
         android:baselineAligned="false">
 
         <LinearLayout
-            android:layout_width="72dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="72">
 
             <TextView
                 android:id="@+id/start_date"
@@ -29,9 +30,10 @@
         <include layout="@layout/ov_listview_vertical_divider"/>
 
         <LinearLayout
-            android:layout_width="100dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="100">
 
             <TextView
                 android:id="@+id/status"
@@ -45,9 +47,10 @@
         <include layout="@layout/ov_listview_vertical_divider"/>
 
         <LinearLayout
-            android:layout_width="100dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="100">
 
             <TextView
                 android:id="@+id/case_name"
@@ -60,9 +63,10 @@
         <include layout="@layout/ov_listview_vertical_divider"/>
 
         <LinearLayout
-            android:layout_width="113dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="113">
 
             <TextView
                 android:id="@+id/item_name"
@@ -75,9 +79,10 @@
         <include layout="@layout/ov_listview_vertical_divider"/>
 
         <LinearLayout
-            android:layout_width="80dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="80">
 
             <TextView
                 android:id="@+id/expected_time"
@@ -90,9 +95,10 @@
         <include layout="@layout/ov_listview_vertical_divider"/>
 
         <LinearLayout
-            android:layout_width="80dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="80">
 
             <TextView
                 android:id="@+id/work_time"
@@ -105,8 +111,9 @@
         <include layout="@layout/ov_listview_vertical_divider"/>
 
         <RelativeLayout
-            android:layout_width="120dp"
-            android:layout_height="match_parent">
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="120">
             <TextView
                 android:id="@+id/worker_name_string"
                 android:layout_width="wrap_content"
@@ -119,7 +126,7 @@
                 android:visibility="gone" />
             <LinearLayout
                 android:id="@+id/worker_info"
-                android:layout_width="119dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
@@ -144,7 +151,7 @@
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="116"
             android:gravity="center">
 
             <TextView
