--- a/app/src/main/res/layout/worker_attendance_listview_view_row.xml
+++ b/app/src/main/res/layout/worker_attendance_listview_view_row.xml
@@ -12,9 +12,10 @@
         android:baselineAligned="false"
         android:minHeight="31dp">
         <LinearLayout
-            android:layout_width="137dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="137">
             <TextView
                 android:id="@+id/worker_attendance_listview_date"
                 android:layout_width="wrap_content"
@@ -25,9 +26,10 @@
         </LinearLayout>
         <include layout="@layout/ov_listview_vertical_divider"/>
         <LinearLayout
-            android:layout_width="116dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="116">
             <TextView
                 android:id="@+id/worker_attendance_listview_type"
                 android:layout_width="wrap_content"
@@ -41,7 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_weight="1">
+            android:layout_weight="400">
             <TextView
                 android:id="@+id/worker_attendance_listview_reason"
                 android:layout_width="wrap_content"
