--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -76,18 +76,48 @@
     <dimen name="case_overview_border_tv_padding_vertical">7dp</dimen>
     <dimen name="case_overview_listview_padding_horizontal">18dp</dimen>
     <dimen name="case_progress_bar_text_size">13dp</dimen>
-    <dimen name="case_overview_taskitem_listview_header_text_size">14dp</dimen>
-    <dimen name="case_overview_statistics_x_axis_padding">8dp</dimen>
-    <dimen name="overview_listview_item_height">56dp</dimen>
-    <dimen name="ov_taskitem_listview_item_height">50dp</dimen>
-    <dimen name="ov_warning_margin_horizontal">8dp</dimen>
-    <dimen name="ov_warning_popup_horizontal_offset">50dp</dimen>
-    <dimen name="ov_warning_popup_vertical_offset">110dp</dimen>
-    <dimen name="ov_statistics_popup_margin_top">6dp</dimen>
-    <dimen name="ov_statistics_axis_text_size">16dp</dimen>
     <dimen name="case_ov_statistics_margin_top">80dp</dimen>
+    <dimen name="case_ov_listview_tv_progress_width">49dp</dimen>
+    <dimen name="case_ov_listview_tv_progress_height">36dp</dimen>
+    <dimen name="case_ov_listview_tv_progress_padding">3dp</dimen>
+    <dimen name="case_ov_listview_tv_progress_margin_left">9dp</dimen>
+    <dimen name="case_ov_listview_tv_progress_margin_right">13dp</dimen>
+    <dimen name="case_ov_listview_tv_progress_text_size">16dp</dimen>
+    <dimen name="case_ov_listview_tv_case_text_size">16dp</dimen>
+    <dimen name="case_ov_listview_tv_vendor_text_size">14dp</dimen>
+    <dimen name="case_ov_listview_tv_vendor_margin_top">7dp</dimen>
+    <dimen name="case_ov_right_top_pane_padding_right">16dp</dimen>
+    <dimen name="case_ov_right_top_pane_padding_top">16dp</dimen>
+    <dimen name="case_ov_right_top_pane_margin_bottom">24dp</dimen>
+    <dimen name="case_ov_right_top_pane_tv_case_margin_left">16dp</dimen>
+    <dimen name="case_ov_right_top_pane_tv_case_text_size">18dp</dimen>
+    <dimen name="case_ov_right_top_pane_tv_progress_string_margin_left">123dp</dimen>
+    <dimen name="case_ov_right_top_pane_tv_progress_string_text_size">14dp</dimen>
+    <dimen name="case_ov_right_top_pane_tv_progress_margin_left">195dp</dimen>
+    <dimen name="case_ov_right_top_pane_tv_progress_text_size">14dp</dimen>
+    <dimen name="case_ov_right_top_pane_progress_bar_width">330dp</dimen>
+    <dimen name="case_ov_right_top_pane_progress_bar_height">18dp</dimen>
+    <dimen name="case_ov_right_top_pane_progress_bar_margin_left">254dp</dimen>
+    <dimen name="case_ov_right_top_pane_case_detail_info_margin_top">24dp</dimen>
+    <dimen name="case_ov_right_top_pane_tv_vendor_string_margin_left">16dp</dimen>
+    <dimen name="case_ov_right_top_pane_tv_vendor_margin_left">104dp</dimen>
+    <dimen name="case_ov_right_top_pane_tv_feed_date_string_margin_left">216dp</dimen>
+    <dimen name="case_ov_right_top_pane_tv_feed_date_margin_left">305dp</dimen>
+    <dimen name="case_ov_right_top_pane_tv_sheet_string_margin_left">442dp</dimen>
+    <dimen name="case_ov_right_top_pane_tv_sheet_margin_left">495dp</dimen>
+    <dimen name="case_ov_right_top_pane_case_detail_linear_layout_margin_left">21dp</dimen>
+    <dimen name="case_ov_right_top_pane_case_detail_linear_layout_margin_right">21dp</dimen>
+    <dimen name="case_ov_right_top_pane_case_detail_linear_layout_margin_top">32dp</dimen>
+    <dimen name="case_ov_right_top_pane_case_detail_linear_layout_padding_left">11dp</dimen>
+    <dimen name="case_ov_right_top_pane_case_detail_linear_layout_padding_right">11dp</dimen>
+    <dimen name="case_ov_right_top_pane_case_detail_linear_layout_min_height">101dp</dimen>
+    <dimen name="case_ov_right_top_pane_case_detail_tv_string_margin_top">8dp</dimen>
+    <dimen name="case_ov_right_top_pane_case_detail_tv_string_margin_bottom">8dp</dimen>
+    <dimen name="case_ov_right_top_pane_case_detail_tv_margin_top">20dp</dimen>
+    <dimen name="case_ov_right_top_pane_case_detail_tv_margin_bottom">20dp</dimen>
+
+    <!-- WorkerOverView fragment -->
     <dimen name="worker_ov_statistics_margin_top">112dp</dimen>
-    <dimen name="ov_statistics_highlight_stroke_width">3dp</dimen>
 
     <!-- Drawer menu -->
     <dimen name="drawer_width">300dp</dimen>
@@ -135,7 +165,7 @@
 
     <!-- Equipment ov -->
     <dimen name="equipment_ov_listview_item_min_height">80dp</dimen>
-    <dimen name="equipment_ov_listview_divider_height">1dp</dimen>
+    <dimen name="divider_height">1dp</dimen>
 
     <!-- Management -->
     <dimen name="management_dialog_window_width">600dp</dimen>
@@ -163,5 +193,22 @@
     <dimen name="detailed_worker_task_schedule_scheduled_tasks_container_margin_left">50dp</dimen>
     <dimen name="detailed_worker_task_schedule_scheduled_tasks_container_margin_right">95dp</dimen>
     <dimen name="detailed_worker_task_schedule_scheduled_tasks_item_index_width">30dp</dimen>
+
+    <!-- Overview-->
+    <dimen name="ov_left_pane_width">227dp</dimen>
+    <dimen name="ov_divider_width">8dp</dimen>
+    <dimen name="ov_search_edittext_height">51dp</dimen>
+    <dimen name="ov_search_edittext_padding_left">14dp</dimen>
+    <dimen name="ov_left_pane_listview_divider_height">2dp</dimen>
+    <dimen name="ov_listview_item_height">56dp</dimen>
+    <dimen name="ov_taskitem_listview_item_height">50dp</dimen>
+    <dimen name="ov_warning_margin_horizontal">8dp</dimen>
+    <dimen name="ov_warning_popup_horizontal_offset">50dp</dimen>
+    <dimen name="ov_warning_popup_vertical_offset">110dp</dimen>
+    <dimen name="ov_statistics_popup_margin_top">6dp</dimen>
+    <dimen name="ov_statistics_axis_text_size">16dp</dimen>
+    <dimen name="ov_statistics_highlight_stroke_width">3dp</dimen>
+    <dimen name="ov_taskitem_listview_header_text_size">14dp</dimen>
+    <dimen name="ov_statistics_x_axis_padding">8dp</dimen>
 
 </resources>
