--- a/app/src/main/res/drawable/bg_solid_btn_bg_gray.xml
+++ b/app/src/main/res/drawable/bg_solid_btn_bg_gray.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners android:radius="5dp" />
-    <solid android:color="@color/gray3"/>
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="?colorControlHighlight">
+    <item>
+        <shape android:shape="rectangle">
+            <corners android:radius="5dp" />
+            <solid android:color="@color/gray3" />
+        </shape>
+    </item>
+</ripple>
