--- a/app/src/main/res/drawable/worker_status_tab_vg_selector.xml
+++ b/app/src/main/res/drawable/worker_status_tab_vg_selector.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:state_selected="true">
-        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-            <stroke android:width="1dp" android:color="@color/gray3"/>
-            <solid android:color="@color/blue1"/>
-        </shape>
-    </item>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="?android:attr/colorControlHighlight">
     <item>
-        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-            <stroke android:width="1dp" android:color="@color/gray3"/>
-            <solid android:color="@android:color/white"/>
-        </shape>
+        <selector>
+            <item android:state_selected="true">
+                <shape android:shape="rectangle">
+                    <stroke
+                        android:width="@dimen/divider_height"
+                        android:color="@color/gray3" />
+                    <solid android:color="@color/blue1" />
+                </shape>
+            </item>
+            <item>
+                <shape android:shape="rectangle">
+                    <stroke
+                        android:width="@dimen/divider_height"
+                        android:color="@color/gray3" />
+                    <solid android:color="@android:color/white" />
+                </shape>
+            </item>
+        </selector>
     </item>
-</selector>
+</ripple>
