--- a/app/src/main/res/layout/fragment_equipment_ov_maintenance.xml
+++ b/app/src/main/res/layout/fragment_equipment_ov_maintenance.xml
@@ -5,18 +5,10 @@
 
     <TextView
         android:id="@+id/add_maintenance_record"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ButtonStyle.Green"
         android:layout_gravity="right"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:textColor="@android:color/white"
-        android:textSize="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="17dp"
-        android:background="@drawable/bg_solid_textview_bg_green"
         android:text="@string/add_maintenance_record"/>
 
     <ListView
@@ -24,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@color/gray3"
-        android:dividerHeight="@dimen/equipment_ov_listview_divider_height"
+        android:dividerHeight="@dimen/divider_height"
         android:layout_marginTop="17dp"/>
 
 </LinearLayout>
