--- a/app/src/main/res/layout/fragment_ov_taskitem.xml
+++ b/app/src/main/res/layout/fragment_ov_taskitem.xml
@@ -1,83 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <ScrollView
-        android:id="@+id/worker_ov_tab_task_items"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <LinearLayout
+            android:id="@+id/upper"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/upper"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <include layout="@layout/charts" />
 
-                <include layout="@layout/ov_statisticts"/>
-
-                <include layout="@layout/h_divider"/>
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/worker_ov_edit_task_item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:textColor="@android:color/white"
-                android:textSize="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="17dp"
-                android:background="@drawable/bg_solid_textview_bg_green"
-                android:text="@string/worker_ov_edit_task_item"/>
-            <LinearLayout
-                android:id="@+id/workers_list_vg"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="17dp"
-                android:gravity="center_vertical">
-
-                <TextView
-                    android:id="@+id/tv_worker_involved"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="24dp"
-                    android:text="@string/case_overview_worker"/>
-
-                <it.sephiroth.android.library.widget.HListView
-                    xmlns:widget="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/case_workers_listview"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="16.7dp"
-                    android:divider="@null"
-                    widget:hlv_dividerWidth="10dp"/>
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/current_task_items"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/detailed_worker_current_task_text"
-                android:textSize="18dp"
-                android:textColor="@color/gray2"
-                android:layout_marginTop="24dp"
-                android:layout_marginLeft="24dp"
-                android:visibility="gone"/>
-
-            <ListView
-                android:id="@+id/listview_task_item"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="17dp"
-                android:divider="@null"/>
-
+            <include layout="@layout/h_divider" />
         </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+
+        <TextView
+            android:id="@+id/edit_task"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="17dp"
+            android:background="@drawable/bg_solid_textview_bg_green"
+            android:paddingBottom="8dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="8dp"
+            android:textColor="@android:color/white"
+            android:textSize="16dp"
+            android:text="@string/worker_ov_edit_task_item" />
+
+        <LinearLayout
+            android:id="@+id/workers_list_vg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:text="@string/case_overview_worker" />
+
+            <it.sephiroth.android.library.widget.HListView xmlns:widget="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/workers"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginLeft="16.7dp"
+                android:divider="@null"
+                widget:hlv_dividerWidth="10dp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/current_task_items"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/detailed_worker_current_task_text"
+            android:textColor="@color/gray2"
+            android:textSize="18dp"
+            android:visibility="gone" />
+
+        <ListView
+            android:id="@+id/tasks"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
+            android:divider="@null" />
+
+    </LinearLayout>
+</ScrollView>
