--- a/app/src/main/res/layout/ftragment_worker_ov_attendane_status.xml
+++ b/app/src/main/res/layout/ftragment_worker_ov_attendane_status.xml
@@ -4,19 +4,11 @@
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/worker_ov_attendance_btn_add_leave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ButtonStyle.Green"
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
         android:layout_marginTop="17dp"
-        android:background="@drawable/bg_solid_textview_bg_green"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:text="@string/worker_ov_tab_attendance_add_leave_date"
-        android:textColor="@android:color/white"
-        android:textSize="16dp" />
+        android:text="@string/worker_ov_tab_attendance_add_leave_date"/>
 
     <ListView
         android:id="@+id/worker_ov_attendance_listview"
