--- a/app/src/main/res/layout/ov_taskitem_list_view_itemview_worker.xml
+++ b/app/src/main/res/layout/ov_taskitem_list_view_itemview_worker.xml
@@ -13,9 +13,10 @@
         android:baselineAligned="false">
 
         <LinearLayout
-            android:layout_width="72dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="72">
 
             <TextView
                 android:id="@+id/start_date"
@@ -29,9 +30,10 @@
         <include layout="@layout/ov_listview_vertical_divider"/>
 
         <LinearLayout
-            android:layout_width="100dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="100">
 
             <TextView
                 android:id="@+id/status"
@@ -46,9 +48,10 @@
         <include layout="@layout/ov_listview_vertical_divider"/>
 
         <LinearLayout
-            android:layout_width="100dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="100">
 
             <TextView
                 android:id="@+id/case_name"
@@ -62,9 +65,10 @@
         <include layout="@layout/ov_listview_vertical_divider"/>
 
         <LinearLayout
-            android:layout_width="113dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="113">
 
             <TextView
                 android:id="@+id/item_name"
@@ -78,9 +82,10 @@
         <include layout="@layout/ov_listview_vertical_divider"/>
 
         <LinearLayout
-            android:layout_width="80dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="80">
 
             <TextView
                 android:id="@+id/expected_time"
@@ -94,9 +99,10 @@
         <include layout="@layout/ov_listview_vertical_divider"/>
 
         <LinearLayout
-            android:layout_width="80dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="80">
 
             <TextView
                 android:id="@+id/work_time"
@@ -110,9 +116,10 @@
         <include layout="@layout/ov_listview_vertical_divider"/>
 
         <LinearLayout
-            android:layout_width="110dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="110">
 
             <TextView
                 android:id="@+id/equipment_used"
@@ -126,9 +133,10 @@
         <include layout="@layout/ov_listview_vertical_divider"/>
 
         <LinearLayout
-            android:layout_width="50dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="50">
 
             <TextView
                 android:id="@+id/error_count"
@@ -144,7 +152,7 @@
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="116"
             android:gravity="center">
 
             <TextView
