--- a/app/src/main/res/layout/v_divider.xml
+++ b/app/src/main/res/layout/v_divider.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <View xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="8dp"
+    android:layout_width="@dimen/ov_divider_width"
     android:layout_height="match_parent"
     android:background="@drawable/divider_v"/>
