--- a/app/src/main/res/layout/worker_ov_worker_listview_item.xml
+++ b/app/src/main/res/layout/worker_ov_worker_listview_item.xml
@@ -2,14 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="8dp"
-    android:minHeight="@dimen/overview_listview_item_height"
+    android:minHeight="@dimen/ov_listview_item_height"
     android:id="@+id/worker_ov_worker_listview_root">
+
+    <include layout="@layout/ov_left_pane_listview_top_divider"/>
 
     <ImageView
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginRight="12dp"
+        android:layout_marginLeft="8dp"
         android:layout_centerVertical="true"
         android:src="@drawable/ic_person_black"
         android:background="@drawable/border_avatar"
